<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.example.pichurchyk_p3.model.UnsplashPhoto.UnsplashUser" />

        <variable
            name="photo"
            type="com.example.pichurchyk_p3.model.UnsplashPhoto" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bottom_menu"
            android:paddingBottom="@dimen/padding_xl">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_img"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="@dimen/margin_l"
                android:src="@drawable/img_user_blank"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xl"
                android:fontFamily="@font/roboto_bold"
                android:text="@{user.name}"
                android:textColor="@color/black"
                android:textSize="@dimen/text_l"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toEndOf="@+id/user_img"
                app:layout_constraintTop_toTopOf="@+id/user_img" />

            <TextView
                android:id="@+id/user_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@{String.format(@string/symbol_at, user.username)}"
                android:textSize="@dimen/text_m"
                app:layout_constraintBottom_toBottomOf="@+id/user_img"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/user_name"
                app:layout_constraintTop_toBottomOf="@+id/user_name" />

            <TextView
                android:id="@+id/user_insta"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xl"
                android:drawablePadding="@dimen/padding_l"
                android:fontFamily="@font/roboto_bold"
                android:text="No Instagram"
                android:textColor="@color/black"
                android:textSize="@dimen/text_m"
                app:drawableStartCompat="@drawable/ic_insta"
                app:layout_constraintStart_toStartOf="@+id/user_nickname"
                app:layout_constraintTop_toBottomOf="@+id/user_nickname" />

            <TextView
                android:id="@+id/user_twitter"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m"
                android:drawablePadding="@dimen/padding_l"
                android:fontFamily="@font/roboto_bold"
                android:text="No Twitter"
                android:textColor="@color/black"
                android:textSize="@dimen/text_m"
                app:drawableStartCompat="@drawable/ic_twitter"
                app:layout_constraintStart_toStartOf="@+id/user_nickname"
                app:layout_constraintTop_toBottomOf="@+id/user_insta" />

            <Button
                android:id="@+id/btn_user_portfolio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_l"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/btn_portfolio"
                android:textSize="@dimen/text_m"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/user_twitter" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_l"
                android:background="@color/black_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_user_portfolio" />

            <TextView
                android:id="@+id/photo_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m"
                android:fontFamily="@font/roboto_bold"
                android:paddingStart="@dimen/padding_m"
                android:paddingEnd="@dimen/padding_m"
                android:textColor="@color/black"
                android:textSize="@dimen/text_l"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_l"
                android:gravity="center"
                android:weightSum="3"
                app:layout_constraintTop_toBottomOf="@+id/photo_title"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/img_card_date"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/img_info_cards_size"
                    android:layout_marginStart="@dimen/margin_m"
                    android:layout_weight="1"
                    android:background="@drawable/shape_img_info_card"
                    android:backgroundTint="@color/green"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_time" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="bottom"
                        android:text="@string/img_info_card_date"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_m" />

                    <TextView
                        android:id="@+id/img_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_regular" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/img_card_color"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/img_info_cards_size"
                    android:layout_marginStart="@dimen/margin_m"
                    android:layout_marginEnd="@dimen/margin_m"
                    android:layout_weight="1"
                    android:background="@drawable/shape_img_info_card"
                    android:backgroundTint="@color/yellow"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_palette" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="bottom"
                        android:text="@string/img_info_card_color"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_m" />

                    <TextView
                        android:id="@+id/img_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@{photo.color}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/img_card_size"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/img_info_cards_size"
                    android:layout_marginEnd="@dimen/margin_m"
                    android:layout_weight="1"
                    android:background="@drawable/shape_img_info_card"
                    android:backgroundTint="@color/purple"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="bottom"
                        android:text="@string/img_info_card_size"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_m" />

                    <TextView
                        android:id="@+id/img_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@{String.format(@string/photo_size_template, photo.width, photo.height)}" />
                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".9" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>